# Semantic-LLM-cache

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
examples/: demo_basic.py  demo_wrap_agent.py  integration_live_research.py  seed_proxy.py
semcache/: __init__.py  cache.py  config.py  embedder.py  metrics.py  store.py
server/: __init__.py  dashboard.py  proxy.py
tests/: test_cache.py  test_dashboard.py  test_embedder.py  test_metrics.py  test_proxy.py  test_store.py
